--- a/index.html
+++ b/index.html
@@ -9,32 +9,7 @@
 <body>
     <div class="world-clock">
         <h1>World Clock</h1>
-        <div id="clocks">
-            <div class="clock" id="dhaka">
-                <h2>Dhaka</h2>
-                <p class="time">--:--:--</p>
-            </div>
-            <div class="clock" id="new-york">
-                <h2>New York</h2>
-                <p class="time">--:--:--</p>
-            </div>
-            <div class="clock" id="london">
-                <h2>London</h2>
-                <p class="time">--:--:--</p>
-            </div>
-            <div class="clock" id="tokyo">
-                <h2>Tokyo</h2>
-                <p class="time">--:--:--</p>
-            </div>
-            <div class="clock" id="sydney">
-                <h2>Sydney</h2>
-                <p class="time">--:--:--</p>
-            </div>
-            <div class="clock" id="dubai">
-                <h2>Dubai</h2>
-                <p class="time">--:--:--</p>
-            </div>
-        </div>
+        <div id="clocks"></div> <!-- Placeholder for dynamic clocks -->
     </div>
     <script src="script.js"></script>
 </body>
