Update Code For user able to Select Countries which need to show.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Clock</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Your CSS file -->
 </head>
 <body>
-    <div id="controls">
-        <label for="timeFormat">Select Time Format:</label>
+    <div id="toolbar">
+        <label for="timeFormat">Time Format:</label>
         <select id="timeFormat">
-            <option value="24">24-Hour</option>
-            <option value="12">12-Hour (AM/PM)</option>
+            <option value="24">24-hour</option>
+            <option value="12">12-hour (AM/PM)</option>
         </select>
     </div>
     <div id="clocks"></div>
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Your JavaScript file -->
 </body>
 </html>
